<resources>
    <string name="app_name">冰冰美图</string>
    <string name="unknown">unknown</string>
    <string name="configure">配置</string>
    <string name="onlyWiFi">仅Wi-Fi下联网</string>
    <string name="area">设置地区</string>
    <string name="download_dir">设置下载目录</string>
    <string name="save">保存</string>
    <string name="wallpaper">壁纸</string>
    <string name="loading">正在加载 ...</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>
